--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
-description: 欢迎来到我的个人站~
+title: tomsun28
+subtitle: 
+description: welcome
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: tomsun28
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: 
 url: "http://baixin.io"
 
 # Comment
