--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: tomsun28
 subtitle: 
-description: 排队上天堂
+description: 
 # 头像里面的标题
 avatarTitle: tomsun28
 # 头像里面的描述
@@ -51,7 +51,7 @@ blog_button:
 nav:
     - {title: 所有文章, description: archive, url: '/archive'}   
     - {title: 标签, description: tags, url: '/tags'}      
-    - {title: 关于我, description: about, url: '/about'}      
+    - {title: 关于, description: about, url: '/about'}      
     
 
 # Pagination
