20171019 modify _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,8 @@ gems: [jekyll-paginate,jekyll-sitemap]
 paginate: 20
 paginate_path: "page/:num/"
 
+#markdown解析
+markdown: kramdown
 
+kramdown:
+  input: GFM
