--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ url: "http://usthe.com"
 # Comment
 comment:
     # disqus: 
-    uyan: 2146669  # 有言id,登录有言官网申请
+    # uyan: 2146669  # 有言id,登录有言官网申请
+    gitment
 
 # Social
 social:
