--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "http://usthe.com"
 comment:
     # disqus: 
     # uyan: 2146669  # 有言id,登录有言官网申请
-    gitment
+    gitment: tomsun28
 
 # Social
 social:
