--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ highlighter: rouge
 textColor: #FF0000
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: orange
+cover_color: red
 
 # The blog button should not be removed.
 blog_button:
@@ -57,7 +57,7 @@ nav:
 
 # Pagination
 gems: [jekyll-paginate,jekyll-sitemap]
-paginate: 20
+paginate: 10
 paginate_path: "page/:num/"
 
 #markdown解析
