--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ permalink: /:year/:month/:title/
 # Format
 highlighter: rouge
 
-textColor: #FF0000
+textColor: #000000
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
 cover_color: 
