--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
 avatarTitle: tomsun28
 # 头像里面的描述
 avatarDesc: 
-url: "https://tom.usthe.com"
+url: "https://usthe.com"
 
 # Comment
 comment:
