--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ blog_button:
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: sureness, description: sureness 项目, url: '/sureness'}  
+    - {title: SURENESS, description: sureness 项目, url: '/sureness'}  
     - {title: 所有文章, description: archive, url: '/archive'}   
     - {title: 标签, description: tags, url: '/tags'}      
     - {title: 关于, description: about, url: '/about'}      
